syntax = "proto3";
package gnovm;

option go_package = "github.com/gnolang/gno/gnovm/pb";

// messages
message MemFile {
	string name = 1;
	string body = 2;
}

message MemPackage {
	string name = 1;
	string path = 2;
	repeated MemFile files = 3;
}