syntax = "proto3";
package vm;

option go_package = "github.com/gnolang/gno/pkgs/sdk/vm/pb";

// imports
import "github.com/gnolang/gno/pkgs/std/std.proto";

// messages
message m_call {
	string Caller = 1;
	string Send = 2;
	string PkgPath = 3;
	string Func = 4;
	repeated string Args = 5;
}

message m_addpkg {
	string Creator = 1;
	std.MemPackage Package = 2;
	string Deposit = 3;
}

message m_eval {
	string Caller = 1;
	string Send = 2;
	string PkgPath = 3;
	string Expr = 4;
}

message InvalidPkgPathError {
}

message InvalidStmtError {
}

message InvalidExprError {
}